--- a/Example/LumberjackLauncherExample/Podfile
+++ b/Example/LumberjackLauncherExample/Podfile
@@ -1,3 +1,11 @@
 platform :ios, '7.0'
-pod 'CocoaLumberjack', '2.0.0'
-pod 'LumberjackConsole'
+
+target 'LumberjackLauncherExample' do
+  pod 'CocoaLumberjack', '3.3.0'
+  pod 'LumberjackConsole'
+
+  target 'LumberjackLauncherExampleTests' do
+    inherit! :search_paths
+    # Pods for testing
+  end
+end
